<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workbench"
            android:icon="@drawable/ic_nav_workbench"
            android:title="@string/menu_workbench" />
        <item
            android:id="@+id/nav_ai_chat"
            android:icon="@drawable/ic_nav_ai_chat"
            android:title="@string/menu_ai_chat" />
        <item
            android:id="@+id/nav_approvals"
            android:icon="@drawable/ic_nav_approvals"
            android:title="@string/menu_approvals" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="业务模块">
        <menu>
            <item
                android:id="@+id/nav_inventory"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_inventory" />
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_camera" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
        </menu>
    </item>

    <item android:title="系统设置">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>